[tool.poetry]
name = "vs-data"
version = "0.1.0"
description = "Vital Seeds database website integration"
authors = ["tombola <thomas.readings@gmail.com>"]
readme = "README.md"
packages = [{ include = "vs_data" }]

[tool.poetry.dependencies]
python = "^3.10"
pypyodbc = "^1.3.6"
requests = "^2.28.1"
woocommerce = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
