[tool.poetry]
name = "vs-data"
version = "0.1.1"
description = "Vital Seeds database website integration"
authors = ["tombola <thomas.readings@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypyodbc = "^1.3.6"
requests = "^2.28.1"
woocommerce = "^3.0.0"
click = "^8.1.3"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.2.0"
isort = "^5.10.1"
ipython = "^8.6.0"
pudb = "^2022.1.3"

[tool.poetry.scripts]
vsdata = "vs_data.__main__:cli"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."vsdata"]
"vsdata" = "vs_data.__main__:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["vs_data", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["fmdb: marks integration_tests for filemaker database"]
